Atm works and is ready to first check. Tests added.